--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,30 @@
+/* key frames */
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes rotate {
+  0% {
+    transform: translateY(-5px);
+  }
+  50% {
+    transform: translateY(5px);
+  }
+  100% {
+    transform: translateY(0px);
+  }
+}
+
+.rotate {
+  animation: rotate 2s infinite;
+}
+
 body {
   font-family: "Karla", sans-serif;
   min-height: 100vh;
@@ -38,12 +65,6 @@ a {
   border: #eee !important;
 }
 
-.disabled {
-  background: #504e4e !important;
-  border: #504e4e 1px solid !important;
-  color: #b5bac4b7 !important;
-}
-
 .container {
   width: 70%;
   margin: auto;
@@ -61,19 +82,75 @@ a.btn {
   display: inline-block;
 }
 
-@keyframes fadeIn {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-
 input {
   padding: 3px 8px;
 }
 
 select {
   padding: 3px 8px;
+}
+
+.full-width {
+  width: 100%;
+}
+
+.highlight {
+  text-decoration: underline;
+  font-weight: bold;
+  color: white;
+}
+
+.btn {
+  padding: 10px 15px;
+  background: var(--blue);
+  color: white;
+  border: var(--blue) solid 1px;
+  box-shadow: 1px 1px 1px rgba(63, 60, 60, 0.267);
+  font-size: 1.3rem;
+  font-family: "Karla", sans-serif;
+  cursor: pointer;
+  user-select: none;
+  transition: all 0.2s ease-in;
+}
+
+.btn:hover {
+  background: var(--d-blue);
+  border: var(--d-blue) solid 1px;
+  outline: none;
+}
+
+.btn:focus {
+  outline: none;
+}
+
+.btn:disabled {
+  background: darkgray;
+  border: darkgray solid 1px;
+}
+
+.animate {
+  animation: fadeIn 0.3s ease-in;
+}
+
+.disabled {
+  background: darkgray;
+  border: darkgray;
+}
+
+.validated {
+  border: #69ec69 1.5px solid;
+}
+
+.validated:focus {
+  outline: none;
+}
+
+.not-validated {
+  border: #c20349cc 1.5px solid;
+}
+
+.input {
+  display: flex;
+  flex-direction: column;
+  margin: 10px 0;
 }
